<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="20dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:layout_marginBottom="@dimen/_3sdp"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="@dimen/_28sdp"
                                    android:layout_height="@dimen/_28sdp"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="@dimen/_10sdp"
                                    android:layout_marginLeft="@dimen/_14sdp"
                                    android:layout_marginRight="@dimen/_6sdp"
                                    android:src="@drawable/ic_point">

                                </ImageView>

                                <com.robotack.loyalti.utilities.CustomFont
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:id="@+id/currentPoints"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_36sdp"
                                    android:textStyle="bold"></com.robotack.loyalti.utilities.CustomFont>

                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:orientation="horizontal"
                                android:layout_marginTop="@dimen/_minus6sdp"
                                android:layout_height="wrap_content">

                                <com.robotack.loyalti.utilities.CustomFont
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="start|center"
                                    android:layout_weight="1"

                                    android:text="@string/avilable_points"
                                    android:layout_marginLeft="@dimen/_48sdp"
                                    android:layout_marginRight="@dimen/_48sdp"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_10sdp"
                                    android:textStyle="bold"></com.robotack.loyalti.utilities.CustomFont>


                                <com.robotack.loyalti.utilities.CustomFont
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:id="@+id/currentPointsValue"
                                    android:layout_marginBottom="4dp"
                                    android:layout_marginRight="@dimen/_8sdp"
                                    android:layout_marginLeft="@dimen/_8sdp"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_13sdp"
                                    android:textStyle="bold"></com.robotack.loyalti.utilities.CustomFont>
                            </LinearLayout>



                        </LinearLayout>




                    </LinearLayout>



                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <com.robotack.loyalti.utilities.CustomFont
                android:layout_width="match_parent"
                android:text="@string/points_to_transfer"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="14dp"
                android:textColor="@color/gray_color"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content">

            </com.robotack.loyalti.utilities.CustomFont>



            <EditText
                android:id="@+id/pointsValue"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/black_edittext"
                android:ems="10"
                android:gravity="center|start"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp" />


            <com.robotack.loyalti.utilities.CustomFont
                android:layout_width="match_parent"
                android:text="@string/transfer_to_account"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="14dp"
                android:textColor="@color/gray_color"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content">

            </com.robotack.loyalti.utilities.CustomFont>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/black_edittext">

                <Spinner
                    android:id="@+id/accountsSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:backgroundTint="@color/white"
                   />
            </RelativeLayout>

            <com.robotack.loyalti.utilities.CustomFont
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:alpha="0.7"
                android:enabled="false"
                android:textStyle="bold"
                android:id="@+id/submitBtn"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="@dimen/_18sdp"
                android:text="@string/submit_"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/dark_button"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content">

            </com.robotack.loyalti.utilities.CustomFont>




            <com.robotack.loyalti.utilities.CustomFont
                android:layout_width="match_parent"
                android:id="@+id/pleaseEnter"
                android:visibility="gone"
                android:text="@string/please_enter_points"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="italic"
                android:layout_marginTop="@dimen/_14sdp"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content">

            </com.robotack.loyalti.utilities.CustomFont>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <include layout="@layout/toolbarview">

    </include>

</androidx.coordinatorlayout.widget.CoordinatorLayout>