<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:indeterminateDrawable="@drawable/progress"
                android:visibility="gone"></ProgressBar>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="20dp"
                android:background="@color/black">

            </View>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="20dp"
                android:background="@color/black">

            </View>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="20dp"
                android:background="@color/black">

            </View>


            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#fff"
                android:orientation="vertical"
                android:visibility="visible"
                shimmer:duration="800">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include
                            layout="@layout/slider_placeholder"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include
                            layout="@layout/slider_placeholder"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include
                            layout="@layout/slider_placeholder"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include
                            layout="@layout/slider_placeholder"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include
                            layout="@layout/slider_placeholder"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include
                            layout="@layout/slider_placeholder"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include
                            layout="@layout/slider_placeholder"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include
                            layout="@layout/slider_placeholder"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include
                            layout="@layout/slider_placeholder"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include
                            layout="@layout/slider_placeholder"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include
                            layout="@layout/slider_placeholder"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_margin="10dp" />

                    </LinearLayout>


                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>


            <com.robotack.loyalti.utilities.CustomFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="20dp"
                android:text="@string/points_to_transfer"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp">

            </com.robotack.loyalti.utilities.CustomFont>

            <com.robotack.loyalti.utilities.CustomFont
                android:id="@+id/points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/blue_colorsdk"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold">

            </com.robotack.loyalti.utilities.CustomFont>


            <com.robotack.loyalti.utilities.CustomFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="20dp"
                android:text="@string/transfer_to_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp">

            </com.robotack.loyalti.utilities.CustomFont>

            <com.robotack.loyalti.utilities.CustomFont
                android:id="@+id/transfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/blue_colorsdk"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold">

            </com.robotack.loyalti.utilities.CustomFont>

            <com.robotack.loyalti.utilities.CustomFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="20dp"
                android:text="@string/calcualeted_cashback"
                android:textColor="@color/black">

            </com.robotack.loyalti.utilities.CustomFont>


            <com.robotack.loyalti.utilities.CustomFont
                android:id="@+id/calculatePoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"

                android:layout_marginRight="20dp"
                android:textColor="@color/blue_colorsdk"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold">

            </com.robotack.loyalti.utilities.CustomFont>

            <com.robotack.loyalti.utilities.CustomFont
                android:id="@+id/submitClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="20dp"
                android:background="@drawable/dark_button"
                android:gravity="center"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/confirm"
                android:textColor="@color/whitesdk"
                android:textSize="18sp"
                android:textStyle="bold">

            </com.robotack.loyalti.utilities.CustomFont>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <include layout="@layout/toolbarview">

    </include>

</androidx.coordinatorlayout.widget.CoordinatorLayout>